--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="../styles/style.css">
 </head>
 <!-- adding font in whole site -->
 <body class="open-sans-normal">
@@ -28,7 +28,7 @@
                 <button class="btn">Download CV</button>
                 <button class="btn">Contact</button>
             </div>
-            <img class="banner-img" src="/images/hardy.png" alt="">
+            <img class="banner-img" src="./images/hardy.png" alt="">
         </div>
     </header>
     <main>
