--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-   <link rel="stylesheet" href="/css/style.css">
+   <link rel="stylesheet" href="/style/style.css">
    <script src="https://kit.fontawesome.com/efe73598c8.js" crossorigin="anonymous"></script>
 </head>
 <!-- adding font in whole site -->
@@ -60,22 +60,22 @@
 
             <div class="skill-sets">
                 <div class="skill-set">
-                    <img src="/images/icons/js.png" alt="">
+                    <img src="./images/icons/js.png" alt="">
                     <h3 class="skill-set-title">Vanilla JavaScript</h3>
                     <p class="skill-set-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
                 <div class="skill-set">
-                    <img src="/images/icons/react.png" alt="">
+                    <img src="./images/icons/react.png" alt="">
                     <h3 class="skill-set-title">React</h3>
                     <p class="skill-set-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
                 <div class="skill-set">
-                    <img src="/images/icons/nodejs.png" alt="">
+                    <img src="./images/icons/nodejs.png" alt="">
                     <h3 class="skill-set-title">Node.js</h3>
                     <p class="skill-set-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
                 <div class="skill-set">
-                    <img src="/images/icons/mongo.png" alt="">
+                    <img src="./images/icons/mongo.png" alt="">
                     <h3 class="skill-set-title">MongoDB</h3>
                     <p class="skill-set-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
@@ -85,7 +85,7 @@
 
          <!-- resume section -->
          
-          <section class="resume-section">
+          <section class="resume-section" style="margin-top: 140px;">
             <h3 class="section-title text-center" >A summary of My Resume</h3>
             <div class="resume-cols">
                 <div class="resume-box">
@@ -136,14 +136,14 @@
             </div>
           </section>
     </main>
-    <footer class="background-color">
+    <footer class="background-color" style="margin-top: 140px;">
         <div class="footer-col-1">
             <h3 class="section-title">Lets Connect</h3>
             <p class="section-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
             <div class="social-icons">
-                <a href=""><img src="images/icons/facebook.png" alt=""></a>
-                <a href=""><img src="images/icons/twitter.png" alt=""></a>
-                <a href=""><img src="images/icons/insta.png" alt=""></a>
+                <a href=""><img src="./images/icons/facebook.png" alt=""></a>
+                <a href=""><img src="./images/icons/twitter.png" alt=""></a>
+                <a href=""><img src="./images/icons/insta.png" alt=""></a>
             </div>
         </div>
         <div class="footer-col-2">
